fix text overlapping

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -419,6 +419,10 @@
   .header_para {
     width: 88%;
   }
+  .header_container{
+  background-size: contain;
+
+  }
 }
 
 @media screen and (max-width: 500px) {
